claude-claude/force-app/main/default/objects/Purchase_Order__c/fields/Expected_Delivery_Date__c.field-meta.xml
<CustomField>
    <fullName>Expected_Delivery_Date__c</fullName>
    <label>Expected Delivery Date</label>
    <type>Date</type>
</CustomField>