claude-claude/force-app/main/default/objects/Purchase_Order__c/fields/Order_Date__c.field-meta.xml
<CustomField>
    <fullName>Order_Date__c</fullName>
    <defaultValue>TODAY()</defaultValue>
    <label>Order Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>