claude-claude/force-app/main/default/objects/Purchase_Order__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Supplier__c</columns>
    <columns>Order_Date__c</columns>
    <columns>Status__c</columns>
    <columns>Approved__c</columns>
    <columns>Total_Amount__c</columns>
    <columns>Expected_Delivery_Date__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Purchase Orders</label>
</ListView>