claude-claude/force-app/main/default/objects/Purchase_Order__c/listViews/Open_Orders.listView-meta.xml
<ListView>
    <fullName>Open_Orders</fullName>
    <columns>NAME</columns>
    <columns>Supplier__c</columns>
    <columns>Order_Date__c</columns>
    <columns>Status__c</columns>
    <columns>Total_Amount__c</columns>
    <columns>Expected_Delivery_Date__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Approved,Sent,Partially Received</value>
    </filters>
    <label>Open Orders</label>
</ListView>