claude-claude/force-app/main/default/objects/Purchase_Order__c/listViews/Pending_Approval.listView-meta.xml
<ListView>
    <fullName>Pending_Approval</fullName>
    <columns>NAME</columns>
    <columns>Supplier__c</columns>
    <columns>Order_Date__c</columns>
    <columns>Status__c</columns>
    <columns>Total_Amount__c</columns>
    <columns>Expected_Delivery_Date__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Draft</value>
    </filters>
    <filters>
        <field>Approved__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <label>Pending Approval</label>
</ListView>